done some conflicts>

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: Full Stack Webdeveloper Nanodegree , edited by me
+  uni: Udacity, nowhere
+  year: June, 2014 &mdash; January, 2015, 1399
   # awards:
-  # summary:
+  summary: i am me! 411A
